# cloudflare-dyndns

./: .gitignore  .goreleaser.yaml  .packit.yaml  Cargo.toml  Dockerfile  Makefile  README.md  cover-cloudflare-dyndns.out  coverage.json  go.mod  go.sum  index.html  io.github.heathcliff26.cloudflare-dyndns.metainfo.xml
.github/workflows/: build-builder.yaml  ci.yaml  coverprofiles.yaml  release.yaml  renovate.yaml
cmd/: main.go
examples/: example-config.yaml  example-relay-daemonset.yaml
examples/helm-values/: client-values.yaml  server-metric-values.yaml  server-values.yaml
hack/: build-all.sh  build-package-openwrt-apk.sh  build-package-openwrt.sh  build.sh  clean.sh  compress-binaries.sh  coverprofile.sh  release.sh  validate.sh
hack/builder/: Dockerfile  install-deps.sh
manifests/helm/: Chart.yaml  README.md  values.yaml
manifests/helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  daemonset.yaml  deployment.yaml  httproute.yaml  ingress.yaml  listenerset.yaml  metrics-service.yaml  service.yaml  servicemonitor.yaml
pkg/client/: client.go  client_test.go  cmd.go
pkg/cloudflare-dyndns/: root.go  root_test.go
pkg/config/: config.go  config_test.go  errors.go
pkg/config/testdata/: valid-config-1.yaml
pkg/dyndns/: dyndns.go  dyndns_test.go  testclient.go  utils.go
pkg/metrics/: collector.go  collector_test.go  metrics.go  metrics_test.go  utils.go
pkg/relay/: cmd.go  relay.go  relay_test.go
pkg/server/: cmd.go  server.go  server_test.go  utils.go
pkg/version/: version.go
rust/: Cargo.toml
rust/src/: cf_types.rs  client.rs  config.rs  errors.rs  main.rs  metrics.rs  utils.rs
src/: index.html  main.rs  main.rs.html  utils.rs  utils.rs.html
src/client/: cloudflare.rs  index.html  mod.rs  mod.rs.html  test.rs
src/config/: index.html  mod.rs  mod.rs.html  test.rs
src/config/testdata/: env-config.yaml  invalid-config-1.yaml  invalid-config-2.yaml  invalid-config-4.yaml  invalid-config-5.yaml  invalid-config-log-level.yaml  valid-config-1.yaml  valid-config-2.yaml
src/dyndns/: index.html  mock.rs  mock.rs.html  mod.rs  mod.rs.html  test.rs
src/relay/: index.html  mod.rs  mod.rs.html  test.rs
src/runtime/: index.html  mod.rs  mod.rs.html  test.rs
src/server/: index.html  mod.rs  mod.rs.html  test.rs  tls.rs  tls.rs.html
src/utils/: index.html  mod.rs  mod.rs.html  test.rs
src/version/: index.html  mod.rs  mod.rs.html  test.rs
tests/: e2e-testsuite.rs
tests/e2e/: mod.rs
tests/e2e/testdata/http/: config.yaml
tests/e2e/testdata/https/: config.yaml
tests/e2e/testdata/relay/: config.yaml
tools/: cloudflare-dyndns-client.service  cloudflare-dyndns-relay.service  cloudflare-dyndns-server.service  copr.spec
